# telegram_news_wakeup_alarm

./: .env.example  .gitignore  Cargo.toml  GRAMMERS_EDGE_CASES.md  GRAMMERS_REFERENCE.md  INSTRUCTIONS_VERBATIM.md  OLLAMA_API_REFERENCE.md  README.md  RESEARCH_REPORT.md  RUST_CRATES_REFERENCE.md  TELEGRAM_PROTOCOL_REFERENCE.md
src/: buffer.rs  config.rs  lib.rs  main.rs  ollama.rs  processor.rs  web.rs
src/telegram/: auth.rs  mod.rs
web/: gen_silence.py  index.html
